<resources>
    <string name="app_name">App Tesis</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_catalogo">Catálogo</string>
    <string name="menu_localizacion">Localización</string>
    <string name="menu_contacto">Contacto</string>
    <string name="menu_historia">Historia</string>
    <string name="menu_servicios">Servicios</string>
    <string name="menu_tutoriales">Tutoriales</string>
    <string name="menu_eventos">Eventos</string>
    <string name="menu_directorio">Directorio</string>
    <string name="menu_redes_sociales">Redes Sociales</string>
    <string name="menu_inicio_sesion">Inicio sesión</string>
    <string name="menu_cerrar_sesion">Cerrar sesión</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_menssajes">Mensajes</string>
    <string name="menu_lot">Lot</string>
    <string name="titulo">UNAM \n Biblioteca 11B1</string>
    <string name="direccion">Biblioteca "Antonio Caso", Facultad de Derecho, UNAM, Cto. Escolar 3000, Copilco Universidad, Coyoacán, 04360 Ciudad de México, CDMX</string>
    <string name="horario">Horario de atencioón: Lunes a domingo y días festivos, de 9:00 a 18:00 horas.
Excepto en periodos vacacionales administrativos de la UNAM.</string>
    <string name="telefonos1">Departamento de Circulación Bibliográfica\n
Planta Principal lado Oriente\n
Teléfono: (+52) 55 5622 1658\n
Correo electrónico: serviciosbc@dgb.unam.mx</string>
    <string name="telefonos2">Linea de contacto directo \n0180065987316</string>
    <string name="historia">El 5 de abril de 1956 abre por primera vez sus puertas la Biblioteca Central de la Universidad Nacional Autónoma de México (UNAM) a una comunidad que ya por entonces se percibía creciente y desbordante, no sólo por su número, sino también por el incremento de la demanda de servicios que esto implicaba, en especial los bibliotecarios, documentales e informativos. Desde la época en que la Universidad abandonó los edificios del centro histórico para trasladarse al sur de la Ciudad de México y abrir así una nueva etapa de su vida institucional, la Biblioteca Central ha cumplido con un papel fundamental en la materialización de la vocación académica de la comunidad universitaria y la de todos aquellos que han tenido el privilegio de hacer uso de sus servicios.

La historia de la Biblioteca Central está ligada indisolublemente a la de su edificio, que es uno de los más emblemáticos del campus universitario. Originalmente, en su diseño y estructura la edificación se concibió para albergar a la Biblioteca Nacional y la Hemeroteca Nacional. Sin embargo, el traslado de los fondos documentales de estas instituciones a su nuevo edificio fue definitivamente rechazado por la Cámara de Senadores y por muchos intelectuales que, en su momento, defendían al centro de la ciudad como principal sede cultural. Cambiar de lugar tan necesarias instituciones hasta los confines del sur de la ciudad parecía, por entonces, algo absolutamente improcedente.

Ante esta situación, se tomó la decisión, bajo la rectoría del Dr. Nabor Carrillo, de que el nuevo edificio, respetando el objetivo de su construcción, albergara a la recién concebida Biblioteca Central, así como al ya existente Departamento Técnico de Bibliotecas de la Universidad Nacional, que tenía funciones de coordinación de bibliotecas de escuelas y facultades.

El primer director de la Biblioteca Central fue el maestro Tobías Chávez Lavista, eminente bibliotecario y profesor de la Escuela Nacional de Bibliotecarios y Archivistas. La estructura administrativa de la recién creada dependencia se componía de tres departamentos: Procesos Técnicos, compuesto por las secciones de catalogación, distribución, adquisición y clasificación; Servicios al Público, con las secciones de consulta, publicaciones periódicas, préstamo, libros en reserva, y material audiovisual; y una Coordinación de Bibliotecas, que entonces atendía a 38 “Bibliotecas Departamentales” de igual número de dependencias universitarias.

En 1966, siendo rector el Dr. Ignacio Chávez, se tomó la determinación de transformar el Departamento Técnico en la Dirección General de Bibliotecas, como dependencia encargada de coordinar el Sistema Bibliotecario y de Información (SIBIUNAM) y hacerse cargo directamente de la función de la Biblioteca Central. El primer director general de bibliotecas fue el Dr. Armando Sandoval Caldera.

Al principio, los grandes espacios con que contaba el edificio de Biblioteca Central fueron ocupados por distintas dependencias universitarias en calidad de almacén. Pero, el crecimiento natural en la demanda de los servicios y la gestión de sucesivas administraciones para definir una sola función del edificio como biblioteca, se llevó a cabo en él una remodelación mayor, que obligó a suspender los servicios bibliotecarios entre 1981 y 1983. Se agregó una escalera interior para intercomunicar todos los pisos del edificio y se instalaron nuevos elevadores. El objetivo era adecuar los espacios de la biblioteca para abrir los servicios en la modalidad de “estantería abierta” y así lograr una mejor interacción de los usuarios con las colecciones de la biblioteca. Se redistribuyó el acervo en el edificio en nueve pisos y, en 1986, se ampliaron los servicios abarcando los siete días de la semana, incluyendo días festivos.

Para el inicio del nuevo milenio, se llevó a cabo una nueva remodelación para la recuperación y mejor aprovechamiento de espacios: se rehabilitó la Planta Principal, que incluyó la apertura del jardín interior con conexiones para equipos de cómputo; se habilitó y equipó una sala para servicio de videoteca en el tercer piso (cerrada al entrar en desuso este formato). Se redistribuyeron las colecciones y se amplió el horario de servicios. Posteriormente, en 2003 se remodeló la Sala de Consulta y se dotó de nuevos equipos a la Sección de Recursos Electrónicos y de Información.




Desarrollo de Servicios
Por instancias del Mtro. Juan Almela Meliá, creador del primer Taller de Restauración de México en el Museo de Antropología e Historia y quien en el curso académico de 1953 había impartido la cátedra sobre Conservación y Reparación de Libros y Documentos Históricos en la Facultad de Filosofía y Letras de la UNAM, se aprobó en 1956 la creación de un Laboratorio-Taller de Restauración, con la finalidad de asistir libros y documentos deteriorados de Biblioteca Central. Al frente de los trabajos de éste quedó el Mtro. Juan Almela Meliá y posteriormente la Sra. Emilia Castell Nuñez, su esposa y también experta en la materia. En diferentes momentos este Laboratorio ha brindado asesoría y apoyo a las bibliotecas del sistema universitario e instituciones públicas y privadas que lo han requerido.

Al momento de su inauguración, la Biblioteca Central contaba con un acervo de 80,000 volúmenes: 60,000 volúmenes provenientes del Departamento Técnico de Bibliotecas y 20,000 nuevas adquisiciones. El préstamo de libros se hacía bajo la modalidad de estantería cerrada y se llevaba a cabo a través de la consulta de los catálogos impresos y el llenado de una “papeleta de préstamo”, la cual era entregada por los usuarios al bibliotecario, quien la remitía al área de almacenaje y de allí se enviaban los libros por montacarga al mostrador de servicios para el registro del préstamo. El servicio se ofrecía de 8:00 a 20:00 horas de lunes a viernes y de 8:00 a 13:00 horas los sábados.

Desde su fundación, la Biblioteca Central ha impulsado, de manera constante, el aprovechamiento de los adelantos tecnológicos necesarios para mejorar el acceso a los servicios bibliotecarios en beneficio de la comunidad universitaria. En los años sesenta, la primer biblioteca que contó con un laboratorio de microfilmación fue Biblioteca Central a fin de llevar a cabo trabajos de resguardo, preservación y sustitución, en algunos casos, de fondos documentales impresos por archivos en microfilm; entre otros proyectos, se inició la microfilmación de la colección de tesis impresas, que ya por entonces saturaba un piso completo del edificio.

En el aspecto tecnológico, desde 1973 la Dirección General de Bibliotecas inició los primeros trabajos que condujeron a la implementación, en 1978, de la primera etapa de un ambicioso proyecto para desarrollar un sistema automatizado unitario para la organización y recuperación de la información de las colecciones de libros de todas las bibliotecas de la UNAM. Este sistema se conoce como LIBRUNAM. El proyecto es completado en 1985 e incluye en su totalidad los catálogos de las bibliotecas de todo el SIBIUNAM.

Hacia fines de 1992 la Biblioteca Central inició el uso de catálogos en disco compacto, lo cual fue muy importante para la comunidad universitaria, pues permitió consultar las bases de datos locales sin tener que enfrentar los problemas y dificultades que en ese año todavía representaban las telecomunicaciones.

La continua incorporación de las innovaciones en materia de sistemas automatizados para las operaciones técnicas del SIBIUNAM permitió a la Dirección General de Bibliotecas poner en marcha, por primera vez, la utilización del “Código de Barras” en Biblioteca Central, el cual sirvió tanto para el préstamo de libros como para la realización de inventarios. En 1997 se inició formalmente el funcionamiento del sistema de préstamo automatizado. En los primeros meses de 2010 el servicio de préstamo de libros a domicilio cuenta, además, con la operación de un sistema de “Autopréstamo”, que consiste en el uso de una pantalla digital donde los alumnos universitarios pueden tramitar y renovar personalmente el registro de los libros que llevan fuera de la biblioteca.</string>
    <string name="servicios_txt">Es un servicio abierto al público en general sin distinción alguna para hacer uso, dentro de las instalaciones de la biblioteca, de los materiales documentales dispuestos en las salas de lectura que funcionan bajo la modalidad de estantería abierta.  Para la consulta de libros en la sala de estantería cerrada (Piso 3 Lado Oriente), es necesario llenar una papeleta de préstamo y entregarla al personal bibliotecario junto con una identificación oficial vigente.  A fin de optimizar el servicio se recomienda no solicitar o acumular más de tres libros en las mesas de lectura.</string>
</resources>