<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

<group>
        <item
            android:id="@+id/nav_catalogo"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_catalogo" />
        <item
            android:id="@+id/nav_localizacion"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_localizacion" />
        <item
            android:id="@+id/nav_contacto"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_contacto" />
        <item
            android:id="@+id/nav_historia"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_historia" />
        <item
            android:id="@+id/nav_servicios"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_servicios" />
        <item
            android:id="@+id/nav_tutoriales"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_tutoriales" />
        <item
            android:id="@+id/nav_eventos"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_eventos" />
        <item
            android:id="@+id/nav_directorio"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_directorio" />

</group>
        <!--item
            android:id="@+id/nav_redes_sociales"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_redes_sociales" />
        <item
            android:id="@+id/nav_inicio_sesion"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_inicio_sesion" />
        <item
            android:id="@+id/nav_cerrar_sesion"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_cerrar_sesion" /-->

    <group >
        <menu>
            <!--item
                android:id="@+id/nav_inicio"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_inicio" />
            <item
                android:id="@+id/nav_mensajes"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_menssajes" /-->
            <item
                android:id="@+id/nav_lot"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_lot" />

        </menu>

    </group>

</menu>