<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.catalogo.CatalogoFragment">
    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="50dp"
        android:gravity="center_horizontal"
        android:text="@string/titulo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_margin="10dp"
            android:text="@string/telefonos1"
            />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/telefonos2"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="¡Siguenos en nuestras redes sociales!"
        android:textStyle="bold|italic"
        android:layout_gravity="center"
        ></TextView>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_marginTop="10dp">
        <ImageView
            android:id="@+id/sm_btn_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fb_icon"
            ></ImageView>
        <ImageView
            android:id="@+id/sm_btn_insta"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:src="@drawable/insta_icon"></ImageView>
        <ImageView
            android:id="@+id/sm_btn_twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/twitter_icon"
            ></ImageView>

    </LinearLayout>
</LinearLayout>